examples/test/testpolicy1841.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1841
  namespace: namespace380
spec:
  podSelector:
    matchLabels:
      key20: value49
      key9: value31
      key31: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value4
          key13: value10
      podSelector:
        matchLabels:
          key38: value6
          key30: value12
          key40: value18
